edit readme and index

--- a/phishing/index.html
+++ b/phishing/index.html
@@ -1,4 +1,4 @@
 <html>
-<a href="https://joeywang4.github.io/phishing/PayPal%20-%20Verify%20your%20account.htm">paypal</a>
-<a href="https://joeywang4.github.io/phishing/drive.htm">google_drive</a>
+<a href="https://joeywang4.github.io/phishing/PayPal%20-%20Verify%20your%20account.htm">paypal</a><br>
+<a href="https://joeywang4.github.io/phishing/drive.htm">google_drive</a><br>
 </html>
