--- a/phishing/index.html
+++ b/phishing/index.html
@@ -2,4 +2,5 @@
 <a href="https://joeywang4.github.io/phishing/PayPal%20-%20Verify%20your%20account.htm">paypal</a><br>
 <a href="https://joeywang4.github.io/phishing/drive.htm">google_drive</a><br>
 <a href="https://joeywang4.github.io/phishing/softbank.htm">softbank</a><br>
+<a href="https://joeywang4.github.io/phishing/google.htm">google</a><br>
 </html>
